--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "TestProxyPattern",
-  "version": "0.0.1",
-  "description": "This is to test proxy pattern",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "hardhat": "^2.13.0"
-  }
+    "version": "0.0.1",
+    "description": "This is to test proxy pattern",
+    "main": "index.js",
+    "license": "MIT",
+    "dependencies": {
+        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+        "@nomiclabs/hardhat-etherscan": "^3.1.7",
+        "@nomiclabs/hardhat-waffle": "^2.0.5",
+        "@openzeppelin/hardhat-upgrades": "^1.22.1",
+        "ethereum-waffle": "^4.0.10",
+        "ethers": "^5.5.1",
+        "hardhat": "^2.13.0",
+        "hardhat-deploy": "^0.11.25"
+    },
+    "devDependencies": {
+        "chai": "^4.3.7",
+        "dotenv": "^16.0.3",
+        "prettier": "^2.8.7",
+        "prettier-plugin-solidity": "^1.1.3"
+    }
 }
